2011-05-05  Tony Gentilcore  <tonyg@chromium.org>

        Reviewed by Adam Barth.

        ASSERT(m_state == ParsingState) fires @ www.canalplus.fr
        https://bugs.webkit.org/show_bug.cgi?id=60101

        * fast/parser/close-while-stopping-expected.txt: Added.
        * fast/parser/close-while-stopping.html: Added.

2011-05-05  Andrey Kosyakov  <caseq@chromium.org>

        Unreviewed. Skip inspector/console/console-shadow-dom-access.html (crashes in debug)
        https://bugs.webkit.org/show_bug.cgi?id=60266

        * platform/mac/Skipped:

2011-05-04  Andrey Kosyakov  <caseq@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: add test for shadow DOM access in the console API
        https://bugs.webkit.org/show_bug.cgi?id=60192

        * http/tests/inspector/elements-test.js:
        (initialize_ElementTest.InspectorTest.findNode.processChildren):
        (initialize_ElementTest.InspectorTest.nodeWithId):
        (initialize_ElementTest.InspectorTest.selectNode):
        * inspector/console/console-shadow-dom-access-expected.txt: Added.
        * inspector/console/console-shadow-dom-access.html: Added.

2011-05-05  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, GTK baselines for new tests.

        * platform/gtk/editing/inserting/typing-at-end-of-line-expected.png: Added.
        * platform/gtk/editing/inserting/typing-at-end-of-line-expected.txt: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-1-expected.png: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-1-expected.txt: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-2-expected.png: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-2-expected.txt: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-3-expected.png: Added.
        * platform/gtk/editing/selection/select-across-readonly-input-3-expected.txt: Added.