@@ -1,3 +1,12 @@
+2011-05-10  Csaba Osztrogonác  <ossy@webkit.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Add new qt-4.8 platform for layout testing
+        https://bugs.webkit.org/show_bug.cgi?id=60544
+
+        * platform/qt-4.8/Skipped: Added.
+
 2011-05-05  Tony Gentilcore  <tonyg@chromium.org>
 
         Reviewed by Adam Barth.
